Initial commit of the game files

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aventura da Alfabetização - Jogo Educativo</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Tela Inicial -->
@@ -13,7 +13,7 @@
             <div class="start-content">
                 <h1 class="game-title">Aventura da Alfabetização</h1>
                 <div class="character-container">
-                    <img src="assets/images/character_mario_style.png" alt="Personagem" class="main-character">
+                    <img src="character_mario_style.png" alt="Personagem" class="main-character">
                 </div>
                 <p class="game-subtitle">Embarque numa aventura mágica de aprendizado!</p>
                 <button id="start-btn" class="btn btn-primary">Começar Aventura</button>
@@ -29,7 +29,7 @@
                 <div class="levels-container">
                     <div class="level-card" data-level="forest">
                         <div class="level-image">
-                            <img src="assets/images/forest_background.png" alt="Floresta Mágica">
+                            <img src="forest_background.png" alt="Floresta Mágica">
                         </div>
                         <h3>Floresta Mágica</h3>
                         <p>Descubra as letras escondidas!</p>
@@ -37,7 +37,7 @@
                     </div>
                     <div class="level-card" data-level="castle">
                         <div class="level-image">
-                            <img src="assets/images/castle_background.png" alt="Castelo Encantado">
+                            <img src="castle_background.png" alt="Castelo Encantado">
                         </div>
                         <h3>Castelo Encantado</h3>
                         <p>Complete as palavras mágicas!</p>
@@ -45,7 +45,7 @@
                     </div>
                     <div class="level-card" data-level="mountain">
                         <div class="level-image">
-                            <img src="assets/images/mountain_background.png" alt="Montanha dos Desafios">
+                            <img src="mountain_background.png" alt="Montanha dos Desafios">
                         </div>
                         <h3>Montanha dos Desafios</h3>
                         <p>Forme frases incríveis!</p>
@@ -62,11 +62,11 @@
         <div class="background" id="game-background">
             <div class="game-header">
                 <div class="score-container">
-                    <img src="assets/images/coin_reward.png" alt="Moedas" class="score-icon">
+                    <img src="coin_reward.png" alt="Moedas" class="score-icon">
                     <span id="score">0</span>
                 </div>
                 <div class="lives-container">
-                    <img src="assets/images/star_reward.png" alt="Vidas" class="lives-icon">
+                    <img src="star_reward.png" alt="Vidas" class="lives-icon">
                     <span id="lives">3</span>
                 </div>
                 <button id="back-to-levels" class="btn btn-back">Voltar</button>
@@ -117,11 +117,11 @@
             <div class="congrats-content">
                 <h2 class="congrats-title">Parabéns!</h2>
                 <div class="character-container">
-                    <img src="assets/images/character_mario_style.png" alt="Personagem" class="main-character celebration">
+                    <img src="character_mario_style.png" alt="Personagem" class="main-character celebration">
                 </div>
                 <p class="congrats-text">Você completou a aventura!</p>
                 <div class="final-score">
-                    <img src="assets/images/coin_reward.png" alt="Moedas" class="score-icon">
+                    <img src="coin_reward.png" alt="Moedas" class="score-icon">
                     <span id="final-score">0</span>
                 </div>
                 <div class="congrats-buttons">
@@ -132,7 +132,7 @@
         </div>
     </div>
 
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
 
